--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>Space
             <nav><a href="https://www.nasa.gov/" target="_blank">NASA</a>
-                <a href="https://www.nasa.gov/" target="_blank">Fortnite</a>
+                <a href="https://www.nasa.gov/" target="_blank">NASA</a>
             </nav>
         </header>
         <main>
