--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
                 <article>
                     <p>Quantum computers work with qubits (quantum bits). Unlike normal computers, their bits don't have two states.</p>
                 </article>
-            </section>            
+            </section>      
+            
+            <section>
+                <b><h2>Gallery</h2></b>
+
+                <article>
+                    
+                </article>
+            </section>
         </main>
     </body>
 </html>
