--- a/index.html
+++ b/index.html
@@ -10,27 +10,19 @@
             <h2>Quantum Computers</h2>
             <nav><a href="power.html" target="_blank">Power</a> <br>
                 <a href="security.html" target="_blank">Security</a> <br>
-                <a href="components.html" target="_blank">Components</a> <br>
-                <a href="uses.html" target="_blank">Uses</a> <br>
-                <a href="manufacturing.html" target="_blank">Manufacturing</a>
+                <a href="gallery.html" target="_blank">Gallery</a> <br>
+                <a href="applications.html" target="_blank">Applications</a> <br>
+                <a href="models.html" target="_blank">Models</a>
             </nav>
         </header>
         <main>
             <section>
-                <b><h2>Understanding Quantum Computers</h2></b>
+                <b><h1>Understanding Quantum Computers</h1></b>
 
                 <article>
                     <p>Quantum computers work with qubits (quantum bits). Unlike normal computers, their bits don't have two states.</p>
                 </article>
             </section>      
-            
-            <section>
-                <b><h2>Gallery</h2></b>
-
-                <article>
-                    
-                </article>
-            </section>
         </main>
     </body>
 </html>
