--- a/power.html
+++ b/power.html
@@ -8,11 +8,11 @@
     <body>
         <header>
             <h2>Quantum Computers</h2>
-            <nav><a href="power.html" target="_self" class="current">Power</a> <br>
+            <nav><a href="power.html" class="current" target="_blank">Power</a> <br>
                 <a href="security.html" target="_blank">Security</a> <br>
-                <a href="components.html" target="_blank">Components</a> <br>
-                <a href="uses.html" target="_blank">Uses</a> <br>
-                <a href="manufacturing.html" target="_blank">Manufacturing</a>
+                <a href="gallery.html" target="_blank">Gallery</a> <br>
+                <a href="applications.html" target="_blank">Applications</a> <br>
+                <a href="models.html" target="_blank">Models</a>
             </nav>
             <main>
                 
