--- a/models.html
+++ b/models.html
@@ -9,10 +9,10 @@
         <header>
             <h2>Quantum Computers</h2>
             <nav><a href="power.html" target="_blank">Power</a> <br>
-                <a href="security.html" class="current" target="_blank">Security</a> <br>
+                <a href="security.html" target="_blank">Security</a> <br>
                 <a href="gallery.html" target="_blank">Gallery</a> <br>
                 <a href="applications.html" target="_blank">Applications</a> <br>
-                <a href="models.html" target="_blank">Models</a>
+                <a href="models.html" class="current" target="_self">Models</a>
             </nav>
         </header>
     </body>
