--- a/gallery.html
+++ b/gallery.html
@@ -10,10 +10,21 @@
             <h2>Quantum Computers</h2>
             <nav><a href="power.html" target="_blank">Power</a> <br>
                 <a href="security.html" target="_blank">Security</a> <br>
-                <a href="gallery.html" class="current" target="_blank">Gallery</a> <br>
+                <a href="gallery.html" class="current shadow-1-strong" target="_blank">Gallery</a> <br>
                 <a href="applications.html" target="_blank">Applications</a> <br>
                 <a href="models.html" target="_blank">Models</a>
             </nav>
-        </header>
+        </header>   
+
+        <main>
+            <section>
+                <h1>Gallery</h1>
+                <div class="gallery">
+                    <img src="images/googleProcessor.jpg" alt="image"/>
+                    <img src="images/classic.jpg" alt="image"/>
+                    <img src="images/quantum.jpg" alt="image"/>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
