Nav Bar Changes

--- a/security.html
+++ b/security.html
@@ -7,13 +7,17 @@
     </head>
     <body>
         <header>
-            <h2>Quantum Computers</h2>
+            <a href ="index.html" target="_blank" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
             <nav><a href="power.html" target="_blank">Power</a> <br>
-                <a href="security.html" class="current" target="_blank">Security</a> <br>
+                <a href="security.html" class="current shadow-1-strong" target="_blank">Security</a> <br>
                 <a href="gallery.html" target="_blank">Gallery</a> <br>
                 <a href="applications.html" target="_blank">Applications</a> <br>
                 <a href="models.html" target="_blank">Models</a>
             </nav>
         </header>
+
+        <main>
+            
+        </main>
     </body>
 </html>
