--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h2>Quantum Computers</h2>
+            <a href ="index.html" target="_blank" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
             <nav><a href="power.html" target="_blank">Power</a> <br>
                 <a href="security.html" target="_blank">Security</a> <br>
                 <a href="gallery.html" class="current shadow-1-strong" target="_blank">Gallery</a> <br>
@@ -23,6 +23,7 @@
                     <img src="images/googleProcessor.jpg" alt="image"/>
                     <img src="images/classic.jpg" alt="image"/>
                     <img src="images/quantum.jpg" alt="image"/>
+                    <img src="images/deutschland.jpg" alt="image"/>
                 </div>
             </section>
         </main>
