--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h2>Quantum Computers</h2>
+            <a href ="index.html" target="_self" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
             <nav><a href="power.html" target="_blank">Power</a> <br>
                 <a href="security.html" target="_blank">Security</a> <br>
                 <a href="gallery.html" target="_blank">Gallery</a> <br>
