--- a/models.html
+++ b/models.html
@@ -7,13 +7,20 @@
     </head>
     <body>
         <header>
-            <h2>Quantum Computers</h2>
+            <a href ="index.html" target="_blank" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
             <nav><a href="power.html" target="_blank">Power</a> <br>
                 <a href="security.html" target="_blank">Security</a> <br>
                 <a href="gallery.html" target="_blank">Gallery</a> <br>
                 <a href="applications.html" target="_blank">Applications</a> <br>
-                <a href="models.html" class="current" target="_self">Models</a>
+                <a href="models.html" class="current shadow-1-strong" target="_self">Models</a>
             </nav>
         </header>
+
+        <main>
+            <section>
+                
+            </section>
+            
+        </main>
     </body>
 </html>
