--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
         </header>
         <main>
             <section>
-                <b><h1>Understanding Quantum Computers</h1></b>
+                <b><h1>Comparison: Normal Computers vs Quantum Computers</h1></b>
 
                 <article>
-                    <p>Quantum computers work with qubits (quantum bits). Unlike normal computers, their bits don't have two states.</p>
+                    <h3>Normal Computers</h3>
+                    <p>Normal Computers are binary. This means that they can only work with 2 states, those being on and off. <br>
+                        These states are represented by the numbers 0 and 1.
+                    </p>
                 </article>
             </section>      
         </main>
