--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <header>
-            <a href ="index.html" target="_blank" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
+            <img src="images/atomic.png" height="70px" alt="image">
+            <a href ="index.html" target="_self" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
+            <img src="images/atomic.png" height="70px" alt="image">
             <nav><a href="power.html" target="_blank">Power</a> <br>
                 <a href="security.html" target="_blank">Security</a> <br>
                 <a href="gallery.html" class="current shadow-1-strong" target="_blank">Gallery</a> <br>
@@ -24,6 +26,7 @@
                     <img src="images/classic.jpg" alt="image"/>
                     <img src="images/quantum.jpg" alt="image"/>
                     <img src="images/deutschland.jpg" alt="image"/>
+                    <img src="images/Screenshot 2025-10-13 125257.png" alt="image"/>
                 </div>
             </section>
         </main>
