--- a/applications.html
+++ b/applications.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <header>
-            <a href ="index.html" target="_blank" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
+            <img src="images/atomic.png" height="70px" alt="image">
+            <a href ="index.html" target="_self" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
+            <img src="images/atomic.png" height="70px" alt="image">
             <nav><a href="power.html" target="_blank">Power</a> <br>
                 <a href="security.html" target="_blank">Security</a> <br>
                 <a href="gallery.html" target="_blank">Gallery</a> <br>
