--- a/applications.html
+++ b/applications.html
@@ -21,7 +21,7 @@
         <main>
             <section>
 
-            <h1><b>Medicine</b></h1>
+            <h1>Applications</h1>
 
             <article><p>Medicine</p></article>
             </section>  
