--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8" content="width=device-width, initial-scale=1.0"/>
         <title>Quantum Computer</title>
+        <link rel="stylesheet" href="BootstrapCSS/bootstrap.css">
         <link rel="stylesheet" href="style.css">
+        
     </head>
     <body>
-        <header>
+        <header class="border-bottom">
             <img src="images/atomic.png" height="70px" alt="image">
             <a href ="index.html" target="_self" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
             <img src="images/atomic.png" height="70px" alt="image">
@@ -20,12 +22,10 @@
         <main>
             
             <section>
-                <b><h1>Comparison: Normal Computers vs Quantum Computers</h1></b>
+                <h1>Traditional</h1>
 
                 <article>
-                    <h3>Normal Computers</h3>
-                    <p>Normal Computers are binary. This means that they can only work with 2 states, those being on and off. <br>
-                        These states are represented by the numbers 0 and 1.
+                    <p>To get a deeper understanding on how 
                     </p>
                 </article>
             </section>      
