Starting page information added, bootstrap changes

--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
         <main>
             
             <section>
-                <h1>Traditional</h1>
+                <h1>What is a Quantum Computer</h1>
 
                 <article>
-                    <p>To get a deeper understanding on how 
+                    <p>A quantum computer is a type of computer that uses quantum bits (qubits), which can exist in multiple states at once through superposition and become linked through entanglement,
+                         allowing it to solve certain problems much faster than classical computers. 
+                         Today, quantum computers are mainly used in research and experimentation for fields like cryptography, chemistry simulations, and optimization problems, while in the future they are expected to be used for breaking and creating encryption, discovering new materials,
+                          optimizing complex systems, like logistics, traffic or finance, and advancing artificial intelligence.
+                          Their processing power allows them to run processes parallel to one another, unlike classical computers, which work sequentially.
+                          While they are both called computers, quantum computers are not meant to replace traditional computers completly, but are rather meant as an accelerator for certain types of calucations that a typical computer would be too slow for.
                     </p>
                 </article>
             </section>      
