--- a/applications.html
+++ b/applications.html
@@ -8,13 +8,13 @@
     <body>
         <header>
             <img src="images/atomic.png" height="70px" alt="image">
-            <a href ="index.html" target="_self" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
+            <a href ="index.html" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
             <img src="images/atomic.png" height="70px" alt="image">
-            <nav><a href="power.html" target="_blank">Power</a> <br>
-                <a href="security.html" target="_blank">Security</a> <br>
-                <a href="gallery.html" target="_blank">Gallery</a> <br>
-                <a href="applications.html" class="current shadow-1-strong" target="_blank">Applications</a> <br>
-                <a href="models.html" target="_blank">Models</a>
+            <nav><a href="power.html">Power</a> <br>
+                <a href="security.html">Security</a> <br>
+                <a href="gallery.html">Gallery</a> <br>
+                <a href="applications.html" class="current shadow-1-strong" target="_self">Applications</a> <br>
+                <a href="models.html">Models</a>
             </nav>
         </header>
 
