--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
+        <header class="border-bottom">
             <img src="images/atomic.png" height="70px" alt="image">
             <a href ="index.html" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
             <img src="images/atomic.png" height="70px" alt="image">
