--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
     <head>
-        <meta charset="UTF-8" content="width=device-width, initial-scale=1.0"/>
+        <meta charset="UTF-8"/>
         <title>Quantum Computer</title>
         <link rel="stylesheet" href="BootstrapCSS/bootstrap.css">
         <link rel="stylesheet" href="style.css">
@@ -10,7 +10,7 @@
     <body>
         <header class="border-bottom">
             <img src="images/atomic.png" height="70px" alt="image">
-            <a href ="index.html" target="_self" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
+            <a href ="index.html" target="_self" id="mainPage" >Quantum Computers</a>
             <img src="images/atomic.png" height="70px" alt="image">
             <nav><a href="power.html">Power</a> <br>
                 <a href="security.html">Security</a> <br>
@@ -19,8 +19,8 @@
                 <a href="models.html">Models</a>
             </nav>
         </header>
+
         <main>
-            
             <section>
                 <h1>What is a Quantum Computer</h1>
 
