Applied Bootstrap to all the other sites

--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
                           While they are both called computers, quantum computers are not meant to replace traditional computers completly, but are rather meant as an accelerator for certain types of calucations that a typical computer would be too slow for.
                     </p>
                 </article>
-            </section>      
+            </section>
+            
+            <section>
+                <h1>Why is this important for us?</h1>
+                <article>
+                <p>WIP
+                    </p>
+                </article>
+            </section>
         </main>
     </body>
 </html>
