--- a/models.html
+++ b/models.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Quantum Computer</title>
+        <link rel="stylesheet" href="BootstrapCSS/bootstrap.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -20,7 +21,16 @@
 
         <main>
             <section>
-                
+                TABLE is WORK IN PROGRESS
+                <table class="table-light">
+                    <thead>
+                        <tr><th colspan="2">Model Comparisons</th></tr>
+                        <tr><th>Name</th><th>Year of creation</th></tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
             </section>
             
         </main>
