--- a/applications.html
+++ b/applications.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Quantum Computer</title>
+        <link rel="stylesheet" href="BootstrapCSS/bootstrap.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -21,10 +22,24 @@
         <main>
             <section>
 
-            <h1>Applications</h1>
+            <h1>Medicine</h1>
 
-            <article><p>Medicine</p></article>
+            <article><p>Quantum computers could play an important role in the future of medicine. They are very different from normal computers because they use quantum bits, which can process many possibilities at the same time. This makes them very powerful for solving complex problems.
+                One important use of quantum computers in medicine is drug development. 
+            </p></article>
             </section>  
+
+            <section>
+                <h1>Finance</h1>
+            </section>
+
+            <section>
+                <h1>Climate</h1>
+            </section>
+
+            <section>
+                <h1>Artificial Intelligence</h1>
+            </section>
         </main>
     </body>
 </html>
