--- a/security.html
+++ b/security.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Quantum Computer</title>
+        <link rel="stylesheet" href="BootstrapCSS/bootstrap.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
