--- a/models.html
+++ b/models.html
@@ -22,7 +22,7 @@
         <main>
             <section>
                 TABLE is WORK IN PROGRESS
-                <table class="table-light">
+                <table class="table-bordered">
                     <thead>
                         <tr><th colspan="2">Model Comparisons</th></tr>
                         <tr><th>Name</th><th>Year of creation</th></tr>
