--- a/applications.html
+++ b/applications.html
@@ -26,6 +26,7 @@
 
             <article><p>Quantum computers could play an important role in the future of medicine. They are very different from normal computers because they use quantum bits, which can process many possibilities at the same time. This makes them very powerful for solving complex problems.
                 One important use of quantum computers in medicine is drug development. 
+                Creating new medicines usually takes many years and costs a lot of money
             </p></article>
             </section>  
 
