--- a/models.html
+++ b/models.html
@@ -22,13 +22,14 @@
         <main>
             <section>
                 TABLE is WORK IN PROGRESS
-                <table class="table-bordered">
+                <table class="table-bordered table-striped table">
                     <thead>
                         <tr><th colspan="2">Model Comparisons</th></tr>
                         <tr><th>Name</th><th>Year of creation</th></tr>
                     </thead>
                     <tbody>
-
+                        <tr><td>WIP</td><td>WIP</td></tr>
+                        <tr><td>WIP</td><td>WIP</td></tr>
                     </tbody>
                 </table>
             </section>
