--- a/models.html
+++ b/models.html
@@ -9,7 +9,7 @@
     <body>
         <header class="border-bottom">
             <img src="images/atomic.png" height="70px" alt="image">
-            <a href ="index.html"id="mainPage" class="shadow-1-strong">Quantum Computers</a>
+            <a href ="index.html"id="mainPage">Quantum Computers</a>
             <img src="images/atomic.png" height="70px" alt="image">
             <nav><a href="power.html">Power</a> <br>
                 <a href="security.html">Security</a> <br>
@@ -20,7 +20,7 @@
         </header>
 
         <main>
-            <section>
+            <section class="container-md rounded shadow bg-gradient bg-primary">
                 TABLE is WORK IN PROGRESS
                 <table class="table-bordered table-striped table">
                     <thead>
@@ -35,5 +35,7 @@
             </section>
             
         </main>
+
+        
     </body>
 </html>
