Index Site Header Background

--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
         <meta charset="UTF-8"/>
         <title>Quantum Computer</title>
         <link rel="stylesheet" href="BootstrapCSS/bootstrap.css">
+        <link rel="stylesheet" href="override.css">
         <link rel="stylesheet" href="style.css">
         
     </head>
     <body>
-        <header class="border-bottom dropdown-header">
-            <img src="images/atomic.png" height="70px" alt="image">
+        <header class="border-bottom dropdown-header bg-gradient bg-primary">
             <a href ="index.html" target="_self" id="mainPage" >Quantum Computers</a>
-            <img src="images/atomic.png" height="70px" alt="image">
-            <nav><a href="power.html">Power</a> <br>
+            <nav class="bg-primary"><a href="power.html">Power</a> <br>
                 <a href="security.html">Security</a> <br>
                 <a href="gallery.html">Gallery</a> <br>
                 <a href="applications.html">Applications</a> <br>
@@ -21,7 +20,7 @@
         </header>
 
         <main>
-            <section>
+            <section class="container-md rounded shadow-lg bg-gradient bg-primary">
                 <h1>What is a Quantum Computer</h1>
 
                 <article>
@@ -33,7 +32,7 @@
                 </article>
             </section>
             
-            <section>
+            <section class="container-md rounded shadow-lg bg-gradient bg-primary my-5">
                 <h1>Why is this important for us?</h1>
                 <article>
                 <p>
