Applications Page Header Background

--- a/applications.html
+++ b/applications.html
@@ -4,23 +4,23 @@
         <meta charset="UTF-8"/>
         <title>Quantum Computer</title>
         <link rel="stylesheet" href="BootstrapCSS/bootstrap.css">
+        <link rel="stylesheet" href="override.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header class="border-bottom">
-            <img src="images/atomic.png" height="70px" alt="image">
-            <a href ="index.html" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
-            <img src="images/atomic.png" height="70px" alt="image">
-            <nav><a href="power.html">Power</a> <br>
+        <header class="border-bottom dropdown-header bg-gradient bg-primary">
+            <a href ="index.html" id="mainPage">Quantum Computers</a>
+            <nav class="bg-primary">
+                <a href="power.html">Power</a> <br>
                 <a href="security.html">Security</a> <br>
                 <a href="gallery.html">Gallery</a> <br>
-                <a href="applications.html" class="current shadow-1-strong" target="_self">Applications</a> <br>
+                <a href="applications.html" class="" target="_self">Applications</a> <br>
                 <a href="models.html">Models</a>
             </nav>
         </header>
 
         <main>
-            <section>
+            <section class="container-md rounded shadow-lg bg-gradient bg-primary">
 
             <h1>Medicine</h1>
 
@@ -30,15 +30,15 @@
             </p></article>
             </section>  
 
-            <section>
+            <section class="container-md rounded shadow-lg bg-gradient bg-primary">
                 <h1>Finance</h1>
             </section>
 
-            <section>
+            <section class="container-md rounded shadow-lg bg-gradient bg-primary">
                 <h1>Climate</h1>
             </section>
 
-            <section>
+            <section class="container-md rounded shadow-lg bg-gradient bg-primary">
                 <h1>Artificial Intelligence</h1>
             </section>
         </main>
