--- a/power.html
+++ b/power.html
@@ -4,14 +4,13 @@
         <meta charset="UTF-8"/>
         <title>Quantum Computer</title>
         <link rel="stylesheet" href="BootstrapCSS/bootstrap.css">
+        <link rel="stylesheet" href="override.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header class="border-bottom">
-            <img src="images/atomic.png" height="70px" alt="image">
-            <a href ="index.html"id="mainPage" class="shadow-1-strong">Quantum Computers</a>
-            <img src="images/atomic.png" height="70px" alt="image">
-            <nav><a href="power.html" class="current shadow-1-strong" target="_self">Power</a> <br>
+        <header class="border-bottom dropdown-header bg-gradient bg-primary">
+            <a href ="index.html"id="mainPage">Quantum Computers</a>
+            <nav class="bg-primary"><a href="power.html"target="_self">Power</a> <br>
                 <a href="security.html">Security</a> <br>
                 <a href="gallery.html">Gallery</a> <br>
                 <a href="applications.html">Applications</a> <br>
@@ -20,7 +19,7 @@
         </header>
             
             <main>
-                <section>
+                <section class="container-md rounded shadow-lg bg-gradient bg-primary">
 
                     <h1><b>Current</b></h1>
 
