--- a/models.html
+++ b/models.html
@@ -4,23 +4,22 @@
         <meta charset="UTF-8"/>
         <title>Quantum Computer</title>
         <link rel="stylesheet" href="BootstrapCSS/bootstrap.css">
+        <link rel="stylesheet" href="override.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header class="border-bottom">
-            <img src="images/atomic.png" height="70px" alt="image">
+        <header class="border-bottom dropdown-header bg-gradient bg-primary">
             <a href ="index.html"id="mainPage">Quantum Computers</a>
-            <img src="images/atomic.png" height="70px" alt="image">
-            <nav><a href="power.html">Power</a> <br>
+            <nav class="bg-primary"><a href="power.html">Power</a> <br>
                 <a href="security.html">Security</a> <br>
                 <a href="gallery.html">Gallery</a> <br>
                 <a href="applications.html">Applications</a> <br>
-                <a href="models.html" class="current shadow-1-strong" target="_self">Models</a>
+                <a href="models.html"target="_self">Models</a>
             </nav>
         </header>
 
         <main>
-            <section class="container-md rounded shadow bg-gradient bg-primary">
+            <section class="container-md rounded shadow-lg bg-gradient bg-primary">
                 TABLE is WORK IN PROGRESS
                 <table class="table-bordered table-striped table">
                     <thead>
