Security Header Background Changed

--- a/security.html
+++ b/security.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8"/>
     <title>Quantum Computer - Security</title>
     <link rel="stylesheet" href="BootstrapCSS/bootstrap.css">
+    <link rel="stylesheet" href="override.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header class="border-bottom">
-    <img src="images/atomic.png" height="70px" alt="atomic symbol">
-    <a href="index.html" id="mainPage" class="shadow-1-strong">Quantum Computers</a>
-    <img src="images/atomic.png" height="70px" alt="atomic symbol">
+<header class="border-bottom dropdown-header bg-gradient bg-primary">
+    <a href="index.html" id="mainPage">Quantum Computers</a>
 
-    <nav>
+    <nav class="bg-primary">
         <a href="power.html">Power</a>
-        <a href="security.html" class="current shadow-1-strong">Security</a>
+        <a href="security.html" target="_self">Security</a>
         <a href="gallery.html">Gallery</a>
         <a href="applications.html">Applications</a>
         <a href="models.html">Models</a>
@@ -24,7 +23,7 @@
 
 <main>
 
-    <section>
+    <section class="container-md rounded shadow-lg bg-gradient bg-primary">
         <h1>Security & Quantum Computing</h1>
         <p>
             Quantum computers represent a serious challenge to modern cybersecurity.
@@ -33,7 +32,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="container-md rounded shadow-lg bg-gradient bg-primary">
         <h2>Threat to Modern Encryption</h2>
         <p>
             Popular encryption algorithms such as <strong>RSA</strong> and
@@ -44,7 +43,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="container-md rounded shadow-lg bg-gradient bg-primary">
         <h2>Post-Quantum Cryptography</h2>
         <p>
             To protect data in the future, researchers are developing
@@ -58,7 +57,7 @@
         </ul>
     </section>
 
-    <section>
+    <section class="container-md rounded shadow-lg bg-gradient bg-primary">
         <h2>Quantum Key Distribution (QKD)</h2>
         <p>
             Quantum Key Distribution uses the laws of quantum mechanics
@@ -68,7 +67,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="container-md rounded shadow-lg bg-gradient bg-primary">
         <h2>Further Reading</h2>
         <ul>
             <li>
