OVERHAULED THE NAVIGATION BAR OF THE START PAGE

--- a/index.html
+++ b/index.html
@@ -9,16 +9,31 @@
         
     </head>
     <body>
-        <header class="border-bottom dropdown-header bg-gradient bg-primary">
-            <a href ="index.html" target="_self" id="mainPage" >Quantum Computers</a>
-            <nav class="bg-primary"><a href="power.html">Power</a> <br>
-                <a href="security.html">Security</a> <br>
-                <a href="gallery.html">Gallery</a> <br>
-                <a href="applications.html">Applications</a> <br>
-                <a href="models.html">Models</a>
-            </nav>
-        </header>
-
+        <div class="bs-component mx-3">
+              <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+                    <ul class="navbar-nav me-auto gap-2">
+                      <li class="">
+                        <a class="nav-link active" href="#">Quantum Computers
+                        </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="applications.html">Applications</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="power.html">Power</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="security.html">Security</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="models.html">Models</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                      </li>
+                    </ul>
+              </nav>
+              </div>
         <main>
             <section class="container-md rounded shadow-lg bg-gradient bg-primary">
                 <h1>What is a Quantum Computer</h1>
