--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         
     </head>
     <body>
-        <div class="bs-component mx-3">
+        <div class="bs-component mx-2 mb-4">
               <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
                     <ul class="navbar-nav me-auto gap-2">
                       <li class="">
