--- a/gallery.html
+++ b/gallery.html
@@ -8,17 +8,31 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header class="border-bottom dropdown-header bg-gradient bg-primary">
-            <a href ="index.html" id="mainPage">Quantum Computers</a>
-            <nav class="bg-primary"><a href="power.html" >Power</a> <br>
-                <a href="security.html" >Security</a> <br>
-                <a href="gallery.html" target="_self">Gallery</a> <br>
-                <a href="applications.html">Applications</a> <br>
-                <a href="models.html">Models</a>
-            </nav>
-        </header>   
+        <nav class="navbar navbar-expand-lg bs-nav sticky-top mb-4" data-bs-theme="dark">
+            <ul class="navbar-nav gap-2">
+                    <li class="nav-item">
+                        <a class="nav-link active text-center" href="#">Quantum Computers
+                        </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link align-items-center" href="applications.html">Applications</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="power.html">Power</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="security.html">Security</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="models.html">Models</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                      </li>
+                    </ul>
+              </nav> 
 
-        <main>
+        <main px-5>
             <section class="container-md rounded shadow-lg bg-gradient bg-primary">
                 <h1>Gallery</h1>
                 <div class="gallery">
