--- a/gallery.html
+++ b/gallery.html
@@ -11,11 +11,11 @@
         <nav class="navbar navbar-expand-lg bs-nav sticky-top mb-4" data-bs-theme="dark">
             <ul class="navbar-nav gap-2">
                     <li class="nav-item">
-                        <a class="nav-link active text-center" href="#">Quantum Computers
+                        <a class="nav-link" href="index.html">Quantum Computers
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link align-items-center" href="applications.html">Applications</a>
+                        <a class="nav-link" href="applications.html">Applications</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="power.html">Power</a>
@@ -27,12 +27,12 @@
                         <a class="nav-link" href="models.html">Models</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="gallery.html">Gallery</a>
+                        <a class="nav-link active" href="gallery.html">Gallery</a>
                       </li>
                     </ul>
               </nav> 
 
-        <main px-5>
+        <main class="px-5">
             <section class="container-md rounded shadow-lg bg-gradient bg-primary">
                 <h1>Gallery</h1>
                 <div class="gallery">
