--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <nav class="navbar navbar-expand-lg bs-nav sticky-top mb-4" data-bs-theme="dark">
             <ul class="navbar-nav gap-2">
                     <li class="nav-item">
-                        <a class="nav-link active text-center" href="#">Quantum Computers
+                        <a class="nav-link active" href="index.html">Quantum Computers
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link align-items-center" href="applications.html">Applications</a>
+                        <a class="nav-link" href="applications.html">Applications</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="power.html">Power</a>
