--- a/models.html
+++ b/models.html
@@ -8,17 +8,30 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header class="border-bottom dropdown-header bg-gradient bg-primary">
-            <a href ="index.html"id="mainPage">Quantum Computers</a>
-            <nav class="bg-primary"><a href="power.html">Power</a> <br>
-                <a href="security.html">Security</a> <br>
-                <a href="gallery.html">Gallery</a> <br>
-                <a href="applications.html">Applications</a> <br>
-                <a href="models.html"target="_self">Models</a>
-            </nav>
-        </header>
-
-        <main>
+        <nav class="navbar navbar-expand-lg bs-nav sticky-top mb-4" data-bs-theme="dark">
+            <ul class="navbar-nav gap-2">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Quantum Computers
+                        </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="applications.html">Applications</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="power.html">Power</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="security.html">Security</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="models.html">Models</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                      </li>
+                    </ul>
+              </nav>
+        <main class="px-5">
             <section class="container-md rounded shadow-lg bg-gradient bg-primary">
                 TABLE is WORK IN PROGRESS
                 <table class="table-bordered table-striped table">
