--- a/security.html
+++ b/security.html
@@ -9,20 +9,30 @@
 </head>
 <body>
 
-<header class="border-bottom dropdown-header bg-gradient bg-primary">
-    <a href="index.html" id="mainPage">Quantum Computers</a>
-
-    <nav class="bg-primary">
-        <a href="power.html">Power</a>
-        <a href="security.html" target="_self">Security</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="applications.html">Applications</a>
-        <a href="models.html">Models</a>
-    </nav>
-</header>
-
-<main>
-
+<nav class="navbar navbar-expand-lg bs-nav sticky-top mb-4" data-bs-theme="dark">
+            <ul class="navbar-nav gap-2">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Quantum Computers
+                        </a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="applications.html">Applications</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="power.html">Power</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" href="security.html">Security</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="models.html">Models</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                      </li>
+                    </ul>
+              </nav>
+        <main class="px-5">
     <section class="container-md rounded shadow-lg bg-gradient bg-primary">
         <h1>Security & Quantum Computing</h1>
         <p>
