--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
                     </ul>
               </nav>
         <main class="px-5">
+              <div class="alert alert-dark text-center">This page is still a <b>work in progress</b>! <br> Anything seen here is subject to change. </div>
+
+              <!--<div class="position-relative">
+                 <img src="images/classic.jpg" alt="ey" class="position-absolute top-0 start-0 w-100 h-100 object-fit-cover">
+                 <div class="container position-relative text-center text-white vh-100 d-flex align-items-center justify-content-center">
+                    <h1>hi</h1>
+                 </div>
+              </div> -->
+              
+             
             <section class="container-md rounded shadow-lg bg-gradient bg-primary">
                 <h1>What is a Quantum Computer</h1>
 
