--- a/applications.html
+++ b/applications.html
@@ -54,5 +54,18 @@
                 <h1>Artificial Intelligence</h1>
             </section>
         </main>
+
+        <footer class="mt-5 pt-4 border-top">
+            <div class="container">
+                <p>© 2024 Quantum Computing Research Project | Filip Gjorgiev & Jesús Dávila</p>
+                <p class="small">This educational website provides an overview of quantum computing fundamentals and applications.</p>
+                <p class="small mt-2">
+                    <a href="index.html" class="text-decoration-none me-3">Home</a>
+                    <a href="https://www.htl-leonding.at/" class="text-decoration-none me-3">Iniciative</a>
+                    <a href="https://mail.google.com/mail/u/4/#inbox?compose=CllgCHrgCqnDWZkJSbqlcsdNqVpqcgkqWvBPRplQtXHsBPfGkqVHRxVSdqLwFhJDnJCnDcKmvBV" class="text-decoration-none">Contact</a>
+                </p>
+            </div>
+        </footer>
+
     </body>
 </html>
