--- a/applications.html
+++ b/applications.html
@@ -57,8 +57,8 @@
 
         <footer class="mt-5 pt-4 border-top">
             <div class="container">
-                <p>© 2024 Quantum Computing Research Project | Filip Gjorgiev & Jesús Dávila</p>
-                <p class="small">This educational website provides an overview of quantum computing fundamentals and applications.</p>
+                <p>© 2026 Quantum Computing Research Project | Filip Gjorgiev & Jesús Dávila</p>
+                <p class="small">This educational website provides applications of quantum computing.</p>
                 <p class="small mt-2">
                     <a href="index.html" class="text-decoration-none me-3">Home</a>
                     <a href="https://www.htl-leonding.at/" class="text-decoration-none me-3">Iniciative</a>
