Added a very big title with a background image

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
               </nav>
 
       <main class="px-5">
-        <div class="my-5">
+        <div class="my-5 hero rounded border">
           <h1 id="header" class="text-center">Quantum Computers</h1>
           </div>
+
             <div class="container-fluid bg-primary rounded border" >
               <h1>What is a Quantum Computer?</h1>
 
