Changed how the background image on the title worked

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </nav>
 
       <main class="px-5">
-        <div class="my-5 hero rounded border">
+        <div class="my-5 rounded border" id="img-index">
           <h1 id="header" class="text-center">Quantum Computers</h1>
           </div>
 
