--- a/applications.html
+++ b/applications.html
@@ -32,27 +32,20 @@
                     </ul>
               </nav>
         <main class="px-5">
-            <section class="container-md rounded shadow-lg bg-gradient bg-primary">
-
-            <h1>Medicine</h1>
-
-            <article><p>Quantum computers could play an important role in the future of medicine. They are very different from normal computers because they use quantum bits, which can process many possibilities at the same time. This makes them very powerful for solving complex problems.
+            <div class="my-5 rounded border" id="img-index">
+            <h1 id="header" class="text-center">Applications</h1>
+            </div>
+             <div class="container-fluid bg-primary rounded border" >
+                            <h1>Medicine</h1>
+                <p>Quantum computers could play an important role in the future of medicine. They are very different from normal computers because they use quantum bits, which can process many possibilities at the same time. This makes them very powerful for solving complex problems.
                 One important use of quantum computers in medicine is drug development. 
                 Creating new medicines usually takes many years and costs a lot of money
-            </p></article>
-            </section>  
-
-            <section class="container-md rounded shadow-lg bg-gradient bg-primary">
+                </p>
+                
                 <h1>Finance</h1>
-            </section>
-
-            <section class="container-md rounded shadow-lg bg-gradient bg-primary">
                 <h1>Climate</h1>
-            </section>
-
-            <section class="container-md rounded shadow-lg bg-gradient bg-primary">
-                <h1>Artificial Intelligence</h1>
-            </section>
+                <h1>Artificial</h1>
+             </div>
         </main>
 
         <footer class="mt-5 pt-4 border-top">
