--- a/security.html
+++ b/security.html
@@ -99,6 +99,17 @@
     </section>
 
 </main>
+ <footer class="mt-5 pt-4 border-top">
+            <div class="container">
+                <p>© 2026 Quantum Computing Research Project | Filip Gjorgiev & Jesús Dávila</p>
+                <p class="small">This educational website provides applications of quantum computing.</p>
+                <p class="small mt-2">
+                    <a href="index.html" class="text-decoration-none me-3">Home</a>
+                    <a href="https://www.htl-leonding.at/" class="text-decoration-none me-3">Iniciative</a>
+                    <a href="https://mail.google.com/mail/u/4/#inbox?compose=CllgCHrgCqnDWZkJSbqlcsdNqVpqcgkqWvBPRplQtXHsBPfGkqVHRxVSdqLwFhJDnJCnDcKmvBV" class="text-decoration-none">Contact</a>
+                </p>
+            </div>
+        </footer>
 
 </body>
 </html>
