Added new title to security

--- a/security.html
+++ b/security.html
@@ -33,6 +33,10 @@
                     </ul>
               </nav>
         <main class="px-5">
+
+            <div class="my-5 rounded border" id="img-index">
+          <h1 id="header" class="text-center">Security</h1>
+          </div>
     <section class="container-md rounded shadow-lg bg-gradient bg-primary">
         <h1>Security & Quantum Computing</h1>
         <p>
