--- a/security.html
+++ b/security.html
@@ -37,17 +37,15 @@
             <div class="my-5 rounded border" id="img-index">
           <h1 id="header" class="text-center">Security</h1>
           </div>
-    <section class="container-md rounded shadow-lg bg-gradient bg-primary">
-        <h1>Security & Quantum Computing</h1>
+
+          <div class="container-fluid bg-primary rounded border" >
+            <h1>Security & Quantum Computing</h1>
         <p>
             Quantum computers represent a serious challenge to modern cybersecurity.
             Many encryption systems used today rely on problems that are difficult
             for classical computers but could be efficiently solved by quantum machines.
         </p>
-    </section>
-
-    <section class="container-md rounded shadow-lg bg-gradient bg-primary">
-        <h2>Threat to Modern Encryption</h2>
+         <h2>Threat to Modern Encryption</h2>
         <p>
             Popular encryption algorithms such as <strong>RSA</strong> and
             <strong>Elliptic Curve Cryptography (ECC)</strong> are based on mathematical
@@ -55,9 +53,6 @@
             Using <em>Shor´s algorithm</em>, a sufficiently powerful quantum computer
             could break these systems.
         </p>
-    </section>
-
-    <section class="container-md rounded shadow-lg bg-gradient bg-primary">
         <h2>Post-Quantum Cryptography</h2>
         <p>
             To protect data in the future, researchers are developing
@@ -69,19 +64,16 @@
             <li>Hash-based digital signatures</li>
             <li>Code-based encryption techniques</li>
         </ul>
-    </section>
 
-    <section class="container-md rounded shadow-lg bg-gradient bg-primary">
         <h2>Quantum Key Distribution (QKD)</h2>
         <p>
             Quantum Key Distribution uses the laws of quantum mechanics
             to securely exchange encryption keys.
             Any attempt to intercept the communication changes the quantum state
             and can be detected immediately.
+        
         </p>
-    </section>
-
-    <section class="container-md rounded shadow-lg bg-gradient bg-primary">
+        <div class="my-5">
         <h2>Further Reading</h2>
         <ul>
             <li>
@@ -100,9 +92,9 @@
                 </a>
             </li>
         </ul>
-    </section>
-
-</main>
+        </div>
+          </div>
+    </main>
  <footer class="mt-5 pt-4 border-top">
             <div class="container">
                 <p>© 2026 Quantum Computing Research Project | Filip Gjorgiev & Jesús Dávila</p>
