Added the new image title to models

--- a/models.html
+++ b/models.html
@@ -32,7 +32,10 @@
                     </ul>
               </nav>
         <main class="px-5">
-          
+          <div class="my-5 rounded border" id="img-index">
+            <h1 id="header" class="text-center">Models</h1>
+          </div>
+
             <section class="container-md rounded shadow-lg bg-gradient bg-primary">
                 TABLE is WORK IN PROGRESS
                 <table class="table-bordered table-striped table">
