Ported new body to models

--- a/models.html
+++ b/models.html
@@ -36,8 +36,8 @@
             <h1 id="header" class="text-center">Models</h1>
           </div>
 
-            <section class="container-md rounded shadow-lg bg-gradient bg-primary">
-                TABLE is WORK IN PROGRESS
+           <div class="container-fluid bg-primary rounded border" > 
+            TABLE is WORK IN PROGRESS
                 <table class="table-bordered table-striped table">
                     <thead>
                         <tr><th colspan="2">Model Comparisons</th></tr>
@@ -48,8 +48,7 @@
                         <tr><td>WIP</td><td>WIP</td></tr>
                     </tbody>
                 </table>
-            </section>
-            
+           </div> 
         </main>
          <footer class="mt-5 pt-4 border-top">
             <div class="container">
