Added new title to power

--- a/power.html
+++ b/power.html
@@ -33,6 +33,9 @@
               </nav>
         <main class="px-5">
           <main>
+          <div class="my-5 rounded border" id="img-index">
+              <h1 id="header" class="text-center">Power</h1>
+          </div>
               <section class="container-md rounded shadow-lg bg-gradient bg-primary">
 
                   <h1><b>Current</b></h1>
