Ported new body and also removed the text since I'm going to revamp it in the future

--- a/power.html
+++ b/power.html
@@ -36,14 +36,12 @@
           <div class="my-5 rounded border" id="img-index">
               <h1 id="header" class="text-center">Power</h1>
           </div>
-              <section class="container-md rounded shadow-lg bg-gradient bg-primary">
 
-                  <h1><b>Current</b></h1>
+          <div class="container-fluid bg-primary rounded border">
+                  <h1><b>-</b></h1>
 
-                  <article><p>To understand just how powerful quantum computers can get, we have to know how powerful our current computers are. <br>
-                  
-                  </p></article>
-              </section>
+                  <p>-</p>
+          </div>
           </main>
         </main>
 
