--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
             <h1 id="header" class="text-center">Gallery</h1>
             </div>
 
-            <section class="container-md rounded shadow-lg bg-gradient bg-primary">
+            <div class="container-fluid bg-primary rounded border">
                 <h1>Gallery</h1>
                 <div class="gallery">
                     <img src="images/googleProcessor.jpg" alt="image"/>
@@ -45,7 +45,7 @@
                     <img src="images/quantum.jpg" alt="image"/>
                     <img src="images/deutschland.jpg" alt="image"/>
                 </div>
-            </section>
+              </div>
         </main>
 
         <footer class="mt-5 pt-4 border-top">
