Changed website theme to red

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                     </ul>
               </nav>
 
-      <main class="px-5">
-        <div class="my-5 rounded border" id="img-index">
+      <main >
+        <div id="title" class="mb-5 rounded shadow-lg">
           <h1 id="header" class="text-center">Quantum Computers</h1>
           </div>
 
-            <div class="container-fluid bg-primary rounded border" >
+            <div id="mainDiv" class="bg-primary rounded px-5 py-5 mx-5 shadow-inner-lg">
               <h1>What is a Quantum Computer?</h1>
 
                <p>A quantum computer is a type of computer that uses <b>quantum bits</b> (qubits), which can exist in multiple states at once through superposition and become linked through entanglement,
@@ -49,7 +49,7 @@
 
               <div class="row">
                 <div class="col-md-6">
-                    <img src="images/googleProcessor.jpg" alt="image" class="img-fluid rounded border">
+                    <img src="images/googleProcessor.jpg" alt="image" class="img-hover img-fluid rounded border">
                 </div>
 
                 <div class="col-md-6">
@@ -64,7 +64,7 @@
             
         </main>
 
-        <footer class="mt-5 pt-4 border-top">
+        <footer class="mt-5 pt-4">
             <div class="container">
                 <p>© 2026 Quantum Computing Research Project | Filip Gjorgiev & Jesús Dávila</p>
                 <p class="small">This educational website provides an overview of quantum computing fundamentals and applications.</p>
