--- a/applications.html
+++ b/applications.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bs-nav sticky-top mb-4" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bs-nav sticky-top" data-bs-theme="dark">
             <ul class="navbar-nav gap-2">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Quantum Computers
@@ -31,11 +31,11 @@
                       </li>
                     </ul>
               </nav>
-        <main class="px-5">
-            <div class="my-5 rounded border" id="img-index">
+        <main>
+            <div id="title" class="mb-5 rounded shadow-lg">
             <h1 id="header" class="text-center">Applications</h1>
             </div>
-             <div class="container-fluid bg-primary rounded border" >
+             <div id="mainDiv" class="bg-primary rounded px-5 py-5 mx-5 shadow-inner-lg">
                             <h1>Medicine</h1>
                 <p>Quantum computers could play an important role in the future of medicine. They are very different from normal computers because they use quantum bits, which can process many possibilities at the same time. This makes them very powerful for solving complex problems.
                 One important use of quantum computers in medicine is drug development. 
@@ -48,7 +48,7 @@
              </div>
         </main>
 
-        <footer class="mt-5 pt-4 border-top">
+        <footer class="mt-5 pt-4">
             <div class="container">
                 <p>© 2026 Quantum Computing Research Project | Filip Gjorgiev & Jesús Dávila</p>
                 <p class="small">This educational website provides applications of quantum computing.</p>
