--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bs-nav sticky-top mb-4" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bs-nav sticky-top" data-bs-theme="dark">
             <ul class="navbar-nav gap-2">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Quantum Computers
@@ -32,13 +32,12 @@
                     </ul>
               </nav> 
 
-        <main class="px-5">
-          <div class="my-5 rounded border" id="img-index">
+        <main>
+          <div id="title" class="mb-5 rounded shadow-lg">
             <h1 id="header" class="text-center">Gallery</h1>
             </div>
 
-            <div class="container-fluid bg-primary rounded border">
-                <h1>Gallery</h1>
+             <div id="mainDiv" class="bg-primary rounded px-5 py-5 mx-5 shadow-inner-lg">
                 <div class="gallery">
                     <img src="images/googleProcessor.jpg" alt="image"/>
                     <img src="images/classic.jpg" alt="image"/>
@@ -48,7 +47,7 @@
               </div>
         </main>
 
-        <footer class="mt-5 pt-4 border-top">
+        <footer class="mt-5 pt-4">
           <div class="container">
               <p>© 2026 Quantum Computing Research Project | Filip Gjorgiev & Jesús Dávila</p>
               <p class="small">This educational website provides an overview of quantum computings capabilities and potential.</p>
