--- a/power.html
+++ b/power.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bs-nav sticky-top mb-4" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bs-nav sticky-top" data-bs-theme="dark">
             <ul class="navbar-nav gap-2">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Quantum Computers
@@ -31,13 +31,12 @@
                       </li>
                     </ul>
               </nav>
-        <main class="px-5">
-          <main>
-          <div class="my-5 rounded border" id="img-index">
+        <main>         
+         <div id="title" class="mb-5 rounded shadow-lg">
               <h1 id="header" class="text-center">Power</h1>
           </div>
 
-          <div class="container-fluid bg-primary rounded border">
+           <div id="mainDiv" class="bg-primary rounded px-5 py-5 mx-5 shadow-inner-lg">
                   <h1><b>-</b></h1>
 
                   <p>-</p>
@@ -45,7 +44,7 @@
           </main>
         </main>
 
-        <footer class="mt-5 pt-4 border-top">
+        <footer class="mt-5 pt-4">
           <div class="container">
               <p>© 2026 Quantum Computing Research Project | Filip Gjorgiev & Jesús Dávila</p>
               <p class="small">This educational website provides an overview of quantum computings capabilities and potential.</p>
