--- a/security.html
+++ b/security.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg bs-nav sticky-top mb-4" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bs-nav sticky-top" data-bs-theme="dark">
             <ul class="navbar-nav gap-2">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Quantum Computers
@@ -32,13 +32,13 @@
                       </li>
                     </ul>
               </nav>
-        <main class="px-5">
+        <main>
 
-            <div class="my-5 rounded border" id="img-index">
+        <div id="title" class="mb-5 rounded shadow-lg">
           <h1 id="header" class="text-center">Security</h1>
           </div>
 
-          <div class="container-fluid bg-primary rounded border" >
+           <div id="mainDiv" class="bg-primary rounded px-5 py-5 mx-5 shadow-inner-lg">
             <h1>Security & Quantum Computing</h1>
         <p>
             Quantum computers represent a serious challenge to modern cybersecurity.
@@ -95,7 +95,7 @@
         </div>
           </div>
     </main>
- <footer class="mt-5 pt-4 border-top">
+<footer class="mt-5 pt-4">
             <div class="container">
                 <p>© 2026 Quantum Computing Research Project | Filip Gjorgiev & Jesús Dávila</p>
                 <p class="small">This educational website provides applications of quantum computing.</p>
