--- a/applications.html
+++ b/applications.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bs-nav sticky-top" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bs-nav sticky-top mb-4" data-bs-theme="dark">
             <ul class="navbar-nav gap-2">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Quantum Computers
@@ -24,6 +24,9 @@
                         <a class="nav-link" href="security.html">Security</a>
                       </li>
                       <li class="nav-item">
+                        <a class="nav-link" href="ai.html">AI & Quantum</a>
+                      </li>
+                      <li class="nav-item">
                         <a class="nav-link" href="models.html">Models</a>
                       </li>
                       <li class="nav-item">
@@ -31,11 +34,11 @@
                       </li>
                     </ul>
               </nav>
-        <main>
-            <div id="title" class="mb-5 rounded shadow-lg">
+        <main class="px-5">
+            <div class="my-5 rounded border" id="img-index">
             <h1 id="header" class="text-center">Applications</h1>
             </div>
-             <div id="mainDiv" class="bg-primary rounded px-5 py-5 mx-5 shadow-inner-lg">
+             <div class="container-fluid bg-primary rounded border" >
                             <h1>Medicine</h1>
                 <p>Quantum computers could play an important role in the future of medicine. They are very different from normal computers because they use quantum bits, which can process many possibilities at the same time. This makes them very powerful for solving complex problems.
                 One important use of quantum computers in medicine is drug development. 
@@ -48,7 +51,7 @@
              </div>
         </main>
 
-        <footer class="mt-5 pt-4">
+        <footer class="mt-5 pt-4 border-top">
             <div class="container">
                 <p>© 2026 Quantum Computing Research Project | Filip Gjorgiev & Jesús Dávila</p>
                 <p class="small">This educational website provides applications of quantum computing.</p>
