Ported app to new body

--- a/applications.html
+++ b/applications.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bs-nav sticky-top mb-4" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bs-nav sticky-top" data-bs-theme="dark">
             <ul class="navbar-nav gap-2">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Quantum Computers
@@ -34,11 +34,11 @@
                       </li>
                     </ul>
               </nav>
-        <main class="px-5">
-            <div class="my-5 rounded border" id="img-index">
-            <h1 id="header" class="text-center">Applications</h1>
-            </div>
-             <div class="container-fluid bg-primary rounded border" >
+        <main>
+            <div id="title" class="mb-5 rounded shadow-lg">
+          <h1 id="header" class="text-center">Applications</h1>
+          </div>
+              <div id="mainDiv" class="bg-primary rounded px-5 py-5 mx-5 shadow-inner-lg">
                             <h1>Medicine</h1>
                 <p>Quantum computers could play an important role in the future of medicine. They are very different from normal computers because they use quantum bits, which can process many possibilities at the same time. This makes them very powerful for solving complex problems.
                 One important use of quantum computers in medicine is drug development. 
